# formap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  SECURITY.md  form_data.json  form_fill_llm.py  form_map.json  form_map_auto.json  form_map_auto_debug.json  install.sh  install_deps.sh  pyproject.toml  requirements.txt  setup.py  setup_env.sh  smart_form_filler.py
examples/: README.md  demo.py  job_application.py  requirements.txt  simple_form.html
form-mapper/: Makefile  README.md  auto_fill_form.py  auto_map_form.py  cleanup.sh  example.env  fill_form.py  map_fields.py  map_form_focused.py  requirements-dev.txt  requirements.txt  run.sh  setup.sh
formap/: __init__.py  __main__.py  form_detector.py  logger.py
formap/models/: field.py
formap/services/: __init__.py  detector.py  filler.py
formap/utils/: __init__.py
tests/: conftest.py  test_detector.py
