[tool.poetry]
name = "formap"
version = "0.1.1"
description = "Automated form filling and mapping tool with LLM integration"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "formap"}]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.42.0"
aiohttp = "^3.9.0"
pydantic = "^2.0.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
